--- a/src/main.css
+++ b/src/main.css
@@ -14,6 +14,8 @@ body,
 ul,
 li {
   font-family: "Lato", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
   list-style: none;
   display: inline;
   box-sizing: border-box;
@@ -34,4 +36,14 @@ li {
     grid-row-end: 4;
     flex-direction: column;
     background-color: aqua;
+}
+
+.cardlist--sub {
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    background-color: azure;
+    box-shadow: 0 8px 6px -6px black;
+    height: 9vh;
+    margin: 2px;
 }
