Create elements dynamically on js, loop over them and render them

--- a/src/main.css
+++ b/src/main.css
@@ -42,7 +42,7 @@ li {
     display: flex;
     padding: 10px;
     align-items: center;
-    box-shadow: 0 8px 6px -6px black;
+    box-shadow: 0 8px 6px -6px silver;
     height: 9vh;
     margin: 1px;
     background-color: white;
