Make the check box change values on checkbox  check

--- a/src/main.css
+++ b/src/main.css
@@ -23,7 +23,7 @@ li {
 
 .grid-container {
   display: grid;
-  height: auto;
+  min-height: 100vh ;
   grid-template-columns: 1fr 2fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
   background-color: #eee;
